After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653349 - SoupCache: incorrect types for some attributes in SoupCacheEntry
SoupCache: incorrect types for some attributes in SoupCacheEntry
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2011-06-24 15:36 UTC by Sergio Villar
Modified: 2011-06-29 15:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (4.97 KB, patch)
2011-06-24 16:05 UTC, Sergio Villar
accepted-commit_now Details | Review

Description Sergio Villar 2011-06-24 15:36:12 UTC
The GVariant format string specifies that "u" -> guint32. We are storing (using the "u" character) some fields that are time_t, which is not guaranteed to be 32 bit (in some 64bit machines is 64bit while in some others is 32bit).

It should be safe to store time_t in guint32 variables as it will take a lot of years to overflow those 32bit integer.

Apart from that, looks like we can store the cache version as a guint16 instead of a guint32.
Comment 1 Sergio Villar 2011-06-24 16:05:24 UTC
Created attachment 190596 [details] [review]
Patch
Comment 2 Sergio Villar 2011-06-29 15:40:13 UTC
Committed 26c53ff8015368e2eb29316bd5736c1423171544. Thx for the review!