soup-cache.c: Replaced the type of some SoupCacheEntry fields.

GVariant format string specifies not only the type but the size of the
numeric values it stores. We were using "u" to store the values of time_t
variables that are not guaranteed to be 32 bit. We were also reading values
stored with "u" using unitialized time_t variables.

https://bugzilla.gnome.org/show_bug.cgi?id=653349